# manga-watcher

./: .gitignore  README.md  checker.py  pyproject.toml  watch.txt
src/: dates.py  email.py  files.py  global_variables.py  scrapping.py
